@@ -1,5 +1,6 @@
-2011-07-19  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-07-22  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* vim.py pydb.py: Synchronize both pdb threads on a ping.
 	* vim.py pydb.py: Fix ignored AttributeError exception (pdb).
 	* debugger.py vim.py misc.py pydb.py: Implement the 'loglevel' pyclewn
 	command.
